# AIS-WiFi-Manager

./: CLAUDE.md  LICENSE  README.md  ais_config.conf  install.sh  pyproject.toml  requirements.txt  run.py  uninstall.sh
adsb_server/: adsb_cli.py  adsb_server.py
ais_server/: __init__.py  __main__.py  cli.py  config.py  db.py  dedup.py  events.py  forwarder.py  ingest.py  nmea.py  pipeline.py  reorder.py  supervisor.py  wifi.py
ais_server/web/: __init__.py  api.py  app.py  auth.py  sockets.py  views.py
ais_server/web/templates/: base.html  change_password.html  dashboard.html  data_in.html  data_out.html  endpoints.html  login.html  nodes.html  system.html  wifi.html
app/: __init__.py  _hotspot_watchdog.py  _shellutil.py  ais_config_manager.py  ais_manager.py  auth.py  database.py  network_diagnostics.py  routes.py  wifi_manager.py
app/templates/: ais_config.html  ais_logs.html  base.html  change_password.html  index.html  login.html
cli/: ais_wifi_cli.py
config/: ais-server.example.yaml  logrotate.conf
examples/: ais_config.conf.example
service/: ais-hotspot-watchdog.service  ais-wifi-manager.service  ais-wifi-powersave-off.service  dnsmasq-shared-ais.conf  wifi-powersave-off.conf
services/: adsb-server.service  web-manager.service  wlan1-config.service
systemd/: ais-server.service
tests/: test_dedup.py  test_nmea.py  test_reorder.py
tools/: ais-node.service  replay.py  samples.nmea
web_interface/: app.py
web_interface/static/: LOGO_README.txt
web_interface/templates/: index.html  login.html
wifi_manager/: wifi_controller.py
(+8 files in other folders)
